# mime

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
cmake/in/: mimeConfig.cmake.in  tcmimeConfig.cmake.in
docs/: CONTRIBUTING.md
include/mime/: fwd.hpp  mime.hpp  mime_details.hpp
include/mime/config/: macro.hpp  version.hpp
scripts/: build.sh  clang-start.sh  create.sh  gcc-start.sh  pull_json.py  test.sh
src/mime/: charset.cpp  mime.cpp  mime_extensions.cpp  mime_extensions_to_type.cpp  mime_type_to_charset.cpp  mime_type_to_extensions.cpp  mime_types.cpp
templates/: charset.cpp.jinja  mime_extensions.cpp.jinja  mime_extensions_to_type.cpp.jinja  mime_type_to_charset.cpp.jinja  mime_type_to_extensions.cpp.jinja  mime_types.cpp.jinja
test/: CMakeLists.txt  test_lib.cpp
test/mime/: mime.cpp  mime_source.cpp
test_package/: conanfile.py  example.cpp
